# Strict-ProLang

./: .gitignore  Breakdown  Build_Instructions.sh  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  Strict_Examples.md  ast.hpp  building_and_running.sh  compile_and_run_a_program.sh  dgm_emitter.cpp  dgm_emitter.hpp  dgm_translator.cpp  example.str  layout.css  lexer.cpp  lexer.hpp  package.json  parser.cpp  runtime.c  runtime.h  source_tree,pgsql
.github/workflows/: build.yml  ci.yml  release.yml
docs/: README.md
examples/: advanced.spl  concurrency.strict  hello.spl
src/: index.js  main.cpp
strictc/: CMakeLists.txt  repo_layout,pgsql
strictc/.github/workflows/: build.yml
strictc/examples/: hello.strict
strictc/include/: ast.hpp  dgm_emitter.hpp  dgm_translator.hpp  lexer.hpp  parser.hpp  runtime.h
strictc/src/: codegen_llvm.cpp  dgm_emitter.cpp  dgm_translator.cpp  driver.cpp  lexer.cpp  parser.cpp  runtime.c
strictc/tests/: run_tests.sh
test/: test.js
